# university_domain

./: README.md
system/dns/: nkk.dp.ua.zone  zones
system/ns_control/: Makefile  arp.cpp  config  config.cpp  config.h  define.h  dialog.cpp  dns.cpp  dns.h  domains.cpp  domains.h  log  login.cpp  main.cpp  message.cpp  ns_control  serial.cpp  serial.h  str.cpp  str.h  tools.cpp  zone_info.cpp  zone_info.h  zones.cpp  zones.h
univer/doc/technical/: EUICC-Policy.html  domain_ukraine1.doc  links.html
univer/examples/colocall.net/: check_ukr.pl  netua.html  teleposrsv_request.html
univer/examples/dns.com.ua/: dogovor.html  glos.html  index.html  move2us.cgi.html  move2us_complete.cgi.html  tax.html  tld_code.html  ua_code.html
univer/examples/dp.ua/: index.htm  report.html  soglashenie.html  zayavka.html
univer/examples/imena.com.ua/: domains_1.php.html  domains_intro.php.html  intrance.htm  manage.php.html  nameservers.php.html  profile.php.htm  redir_mail.php.html  redir_web.php.html  registration.php.html  registration2.php.html  registration3.php.html  whois.php.html  zone.php.html
univer/examples/ukr.net/: hosting.html  tax.html
univer/registrant/site/: accept_query.php  cancel_query.php  check_query.php  complete.php  confirm.php  include.php  (+8 more)
univer/registrator/engine/src/: Makefile.am  Makefile.in  conf.h  config.cpp  define.h  define.h~  domain.cpp  domain.h  engine.cpp  engine.cpp~  engine.h  html.cpp  html.cpp~  html.h  html.h~  message.cpp  message.h  param.cpp~  sql.cpp~  sql.h~  str.h
univer/registrator/engine/src/sql/: mysql.cpp  mysql.h
(+281 files in other folders)
