bin_PROGRAMS = engine
engine_SOURCES = engine.cpp common.cpp common.h conf.h config.cpp define.h html.cpp html.h message.cpp message.h param.cpp param.h str.cpp str.h sql.cpp sql.h pgsql.cpp pgsql.h domain.cpp domain.h

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
engine_LDFLAGS = $(all_libraries) 
